--- a/index.html
+++ b/index.html
@@ -55,5 +55,14 @@
         </div>
         <!-- wrapper END -->
 
+        <div class="overlay"></div>
+
+        <div class="window">
+            <div class="window-title">Спасибо за подписку!</div>
+            <div class="window-text">Рассылка на ваш адрес успешно<br />активирована.</div>
+            <div class="window-link"><a href="#">ОК</a></div>
+            <a href="#" class="window-close"></a>
+        </div>
+
     </body>
 </html>
