--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                         </div>
                     </div>
 
+                    <div class="text-error">Все поля должны быть заполнены</div>
+
                 </form>
 
             </div>
